fix(marketing): fix layout where html full height and fix overflow settings in showcases page to scroll (#6)
- fix html, body only use portion of device height and leave blank space

- fix overflow css and put it on outer section only -- fix weird scroll bar places

--- a/apps/marketing/src/index.css
+++ b/apps/marketing/src/index.css
@@ -1,7 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
   --default-font-family: "Noto Sans", var(--font-sans);
 }
 
+@layer base {
+  html,
+  body,
+  #root {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: hidden;
+  }
+}
